// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideMenu should close again once the second button is clicked 1`] = `
<div>
  <glamorous(div)
    isVisible={true}
    onClick={[Function]}
  >
    <span
      className="thermometer"
    />
    <p>
      Comfort
    </p>
  </glamorous(div)>
  <Drawer
    containerStyle={
      Object {
        "background": "transparent",
        "boxShadow": "none",
        "display": "flex",
      }
    }
    disableSwipeToOpen={true}
    docked={false}
    onRequestChange={[Function]}
    open={false}
    openSecondary={false}
    swipeAreaWidth={45}
    width={365}
    zDepth={2}
  >
    <glamorous(div)
      background="#fff"
      boxShadow="rgba(0, 0, 0, 0.156863) 0px 3px 10px, rgba(0, 0, 0, 0.227451) 0px 3px 10px"
      width="275px"
    >
      <Connect(FamilySideBar)
        closeMenu={[Function]}
      />
    </glamorous(div)>
    <glamorous(div)
      background="transparent"
    >
      <glamorous(div)
        isVisible={false}
        left="275px"
        onClick={[Function]}
      >
        <span
          className="thermometer"
        />
        <p>
          Comfort
        </p>
      </glamorous(div)>
    </glamorous(div)>
  </Drawer>
</div>
`;

exports[`SideMenu should initially render closed 1`] = `
<div>
  <glamorous(div)
    isVisible={true}
    onClick={[Function]}
  >
    <span
      className="thermometer"
    />
    <p>
      Comfort
    </p>
  </glamorous(div)>
  <Drawer
    containerStyle={
      Object {
        "background": "transparent",
        "boxShadow": "none",
        "display": "flex",
      }
    }
    disableSwipeToOpen={true}
    docked={false}
    onRequestChange={[Function]}
    open={false}
    openSecondary={false}
    swipeAreaWidth={45}
    width={365}
    zDepth={2}
  >
    <glamorous(div)
      background="#fff"
      boxShadow="rgba(0, 0, 0, 0.156863) 0px 3px 10px, rgba(0, 0, 0, 0.227451) 0px 3px 10px"
      width="275px"
    >
      <Connect(FamilySideBar)
        closeMenu={[Function]}
      />
    </glamorous(div)>
    <glamorous(div)
      background="transparent"
    >
      <glamorous(div)
        isVisible={false}
        left="275px"
        onClick={[Function]}
      >
        <span
          className="thermometer"
        />
        <p>
          Comfort
        </p>
      </glamorous(div)>
    </glamorous(div)>
  </Drawer>
</div>
`;

exports[`SideMenu should open once the first button is clicked 1`] = `
<div>
  <glamorous(div)
    isVisible={false}
    onClick={[Function]}
  >
    <span
      className="thermometer"
    />
    <p>
      Comfort
    </p>
  </glamorous(div)>
  <Drawer
    containerStyle={
      Object {
        "background": "transparent",
        "boxShadow": "none",
        "display": "flex",
      }
    }
    disableSwipeToOpen={true}
    docked={false}
    onRequestChange={[Function]}
    open={true}
    openSecondary={false}
    swipeAreaWidth={45}
    width={365}
    zDepth={2}
  >
    <glamorous(div)
      background="#fff"
      boxShadow="rgba(0, 0, 0, 0.156863) 0px 3px 10px, rgba(0, 0, 0, 0.227451) 0px 3px 10px"
      width="275px"
    >
      <Connect(FamilySideBar)
        closeMenu={[Function]}
      />
    </glamorous(div)>
    <glamorous(div)
      background="transparent"
    >
      <glamorous(div)
        isVisible={true}
        left="275px"
        onClick={[Function]}
      >
        <span
          className="thermometer"
        />
        <p>
          Comfort
        </p>
      </glamorous(div)>
    </glamorous(div)>
  </Drawer>
</div>
`;
